apps/services/home-assistant/ha-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ha-ingress
  namespace: home-assistant
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ha.darioludwig.space
    secretName: ha-secret
  rules:
  - host: ha.darioludwig.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-assistant
            port:
              number: 8123
